[package]
name = "mcsdk"
version = "0.1.0"
edition = "2021"
description = "A Local Minecraft Server Plugin Testing Solution"
readme = "Readme.md"
homepage = "https://github.com/Noriskky/mc-server-dev-kit"
repository = "https://github.com/Noriskky/mc-server-dev-kit"
license = "GPL-3.0-only"
keywords = ["server-plugins", "cli", "mc", "minecraft", "minecraft-server"]

[dependencies]
libtermcolor = "1.1.0"
clap = { version = "4.5.4", features = ["color", "derive"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17.8"
url = "2.5.0"
regex = "1.10.4"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }
rand = "0.8.5"
tempdir = "0.3.7"
futures-util = "0.3.30"